# Hackathon_Quoridor

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
Dokumente/: Testprojekt_Information_Hackathon_2020.pptx
GameLib/: AbstractGame.h  AbstractPlayer.cpp  AbstractPlayer.h  Barrier.cpp  Barrier.h  CMakeLists.txt  ConsoleUtils.cpp  ConsoleUtils.h  Coordinate.cpp  Coordinate.h  Game.cpp  Game.h  GameField.cpp  GameField.h  GameRules.cpp  GameRules.h  HumanPlayer.cpp  HumanPlayer.h  IGame.h  IPlayer.h  Player.h  Position.cpp  Position.h  QuoridorGame.cpp  QuoridorGame.h  QuoridorGame.h.rej
Graph/: CMakeLists.txt  Edge.cpp  Edge.h  Graph-commons.h  Graph.cpp  Graph.h  GraphMaps.h  PointerIteratorWrapper.h  SimpleRange.h  Vertex.cpp  Vertex.h  VertexVector.h
Graph/Algorithm/: BreadthFirstSearch.cpp  BreadthFirstSearch.h
Implementierung/: .gitignore  TODO.txt  main.cpp
Implementierung/GameLib/: ConsoleUtils.cpp  Coordinate.h  GameField.h  Position.h
Implementierung/Graph/: Edge.cpp  Graph-commons.h  Graph.cpp  Graph.h  GraphMaps.h  PointerIteratorWrapper.h  Vertex.h  VertexVector.h
Implementierung/Graph/Algorithm/: BreadthFirstSearch.h
Implementierung/Logger/: CoutLogPolicy.h  LogPolicyInterface.h
Logger/: CMakeLists.txt  CoutLogPolicy.cpp  CoutLogPolicy.h  FileLogPolicy.cpp  FileLogPolicy.h  Log.h  LogLevel.cpp  LogLevel.h  LogPolicyInterface.h  Logger.h
