add_library(GraphLib
        STATIC
        Edge.cpp
        Edge.h
        Vertex.cpp
        Vertex.h
        Graph.cpp
        Graph.h
        Graph-commons.h
        PointerIteratorWrapper.h
        SimpleRange.h
        GraphMaps.h
        Algorithm/BreadthFirstSearch.cpp
        Algorithm/BreadthFirstSearch.h
        VertexVector.h)
set_project_warnings(GraphLib)